--- a/index.html
+++ b/index.html
@@ -25,53 +25,71 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
 		<script src="js/nivo.js"></script>
 		<script src="js/main.js"></script>
+
+		<script type="text/javascript">
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-3376477-13']);
+			_gaq.push(['_trackPageview']);
+
+			(function() {
+				var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+				ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
+		</script>
 	</head>
 
 	<body>
-		<header>
-			<div class="inner">
-				<h1>Opcraft</h1>
-				<h2>The best way to manage your CraftBukkit server.
-			</div>
-		</header>
-
-		<div id="main" class="group">
-			<div class="inner">
-				<div id="about">
-					<section id="desc">
-						<h3>About</h3>
-
-						<p>Opcraft is a little web app that helps you manage your CraftBukkit-powered Minecraft server. It has all the features you'd expect, including basic server management, user control, and item giving, as well as a real-time chat/console mode. It's free and <a href="https://github.com/paulstraw/Opcraft">open source</a>, so you can even add your own awesome features.</p>
-					</section>
-
-					<section id="requirements">
-						<h3>Requirements</h3>
-
-						<ul>
-							<li>A <a href="http://minecraft.net">Minecraft</a> server (powered by <a href="http://bukkit.org">CraftBukkit</a>)
-							<li>The <a href="http://forums.bukkit.org/threads/admn-info-jsonapi-v1-6-2-json-http-and-socket-api-for-controlling-a-server-798.14270/">JSONAPI</a> Bukkit plugin</li>
-							<li>A great web browser. <a href="http://google.com/chrome">Google Chrome</a> and <a href="http://www.apple.com/iphone/features/safari.html">Mobile Safari</a> are my personal favorites, but anything that supports <a href="http://en.wikipedia.org/wiki/WebSockets">WebSockets</a> should work great.</li>
-							<li>There is no step 3! (or whatever) If things aren't working, <a href="mailto:paulstraw@paulstraw.com">let me know</a>.</li>
-						</ul>
-					</section>
-
-					<a id="tryIt" href="app">Try Opcraft Now!</a>
-
-					<section id="socialCrap">
-						<a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="paulstraw">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
-
-						<iframe src="http://www.facebook.com/plugins/like.php?app_id=307821841510&amp;href&amp;send=false&amp;layout=button_count&amp;width=200&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font=lucida+grande&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:200px; height:21px;" allowTransparency="true"></iframe>
-					</section>
+		<div id="wrapper">
+			<header>
+				<div class="inner">
+					<h1>Opcraft</h1>
+					<h2>The best way to manage your CraftBukkit server.
 				</div>
+			</header>
 
-				<div id="iPhone">
-					<div id="slider">
-						<img src="img/screens/players.png">
-						<img src="img/screens/give.png">
-						<img src="img/screens/chat.png">
-						<img src="img/screens/server.png">
-						<img src="img/screens/givedialog.png">
-						<img src="img/screens/spring.png">
+			<div id="main" class="group">
+				<div class="inner">
+					<div id="about">
+						<section id="desc">
+							<h3>About</h3>
+
+							<p>Opcraft is a little web app that helps you manage your CraftBukkit-powered Minecraft server. It has all the features you'd expect, including basic server management, user control, and item giving, as well as a real-time chat/console mode. It's free and <a href="https://github.com/paulstraw/Opcraft">open source</a>, so you can even add your own awesome features.</p>
+
+							<p>Opcraft was just released, so it might still be a little buggy. If things aren't working, you can let me know <a href="http://twitter.com/paulstraw">@paulstraw</a>. You should <a href="http://twitter.com/paulstraw">follow me on Twitter</a> (or check out my <a href="http://blog.paulstraw.com">Tumblr</a>) if you want to keep up with this and other stuff I make.</p>
+						</section>
+
+						<section id="requirements">
+							<h3>Requirements</h3>
+
+							<ul>
+								<li>A <a href="http://minecraft.net">Minecraft</a> server (powered by <a href="http://bukkit.org">CraftBukkit</a>)
+								<li>The <a href="http://forums.bukkit.org/threads/admn-info-jsonapi-v1-6-2-json-http-and-socket-api-for-controlling-a-server-798.14270/">JSONAPI</a> Bukkit plugin</li>
+								<li>A great web browser. <a href="http://google.com/chrome">Google Chrome</a> and <a href="http://www.apple.com/iphone/features/safari.html">Mobile Safari</a> are my personal favorites, but anything that supports <a href="http://en.wikipedia.org/wiki/WebSockets">WebSockets</a> should work.</li>
+								<li>There is no step 3! (or whatever)</li>
+							</ul>
+						</section>
+
+						<a id="tryIt" href="app">Try Opcraft Now!</a>
+
+						<section id="socialCrap">
+							<a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="paulstraw">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+
+							<a id="tumblrButton" href="http://www.tumblr.com/share" title="Share on Tumblr" style="display:inline-block; text-indent:-9999px; overflow:hidden; width:81px; height:20px; background:url('http://platform.tumblr.com/v1/share_1.png') top left no-repeat transparent;">Share on Tumblr</a>
+
+							<div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#appId=227105803982277&amp;xfbml=1"></script><fb:like href="http://opcraft.com" send="false" layout="button_count" width="400" show_faces="false" font=""></fb:like>
+						</section>
+					</div>
+
+					<div id="iPhone">
+						<div id="slider">
+							<img src="img/screens/players.png">
+							<img src="img/screens/give.png">
+							<img src="img/screens/chat.png">
+							<img src="img/screens/server.png">
+							<img src="img/screens/givedialog.png">
+							<img src="img/screens/spring.png">
+						</div>
 					</div>
 				</div>
 			</div>
@@ -84,9 +102,13 @@
 					<li>Minecraft is made by <a href="http://mojang.com">Mojang</a></li>
 					<li>Bukkit is made by the <a href="http://bukkit.org/">Bukkit team</a></li>
 					<li>JSONAPI is made by <a href="https://github.com/alecgorge">Alec Gorge</a>
+					<li>Certain UI elements shamelessly borrowed from <a href="http://tapbots.com/">Tapbots'</a> fantastic <a href="http://tapbots.com/software/tweetbot/">Tweetbot</a> app. You should buy it, seriously.</li>
+					<li>I don't care about Internet Explorer except when I have to for work stuff. Sorry if things look jacked up, dude, but you should get a <a href="http://google.com/chrome">better browser</a>.</li>
 					<li>Everyone owns the stuff they made. DBAA.</li>
 				</ul>
 			</div>
-		<footer>
+		</footer>
+
+		<script type="text/javascript" src="http://platform.tumblr.com/v1/share.js"></script>
 	</body>
 </html>
