Added my Sublime project file to .gitignore, and changed the viewport on the site.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="">
 		<meta name="designer" content="Paul Straw">
 		<meta name="developer" content="Paul Straw">
-		<meta name="viewport" content="width=device-width; initial-scale=1">
+		<meta name="viewport" content="width=1024;">
 		<!-- Add "maximum-scale=1" to fix the weird iOS auto-zoom bug on orientation changes. -->
 
 		<title>Opcraft &mdash; The best way to manage your CraftBukkit server</title>
