Lots of cleanup and rearranging, plus a build system that works (Node Jake)

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -20,7 +20,7 @@
 		<![endif]-->
 
 		<link rel="shortcut icon" href="img/favicon.png">
-		<link rel="stylesheet/less" type="text/css" href="css/screen.less">
+		<link rel="stylesheet/less" type="text/css" href="screen.less">
 
 		<script src="js/jquery.js"></script>
 		<script src="js/less.js"></script>
@@ -39,7 +39,7 @@
 		</header>
 
 		<div id="content">
-			lazy: <button onclick="delete localStorage.mcApiUser; delete localStorage.mcApiPass">Clear</button>
+			<button onclick="delete localStorage.mcApiUser; delete localStorage.mcApiPass">Looks like there was a problem.<br>Click here to try entering your server info again</button>
 		</div>
 
 		<footer>
